test/fails/bad_casts/functions3.lgl
tag coord a is vec<2>;
tag coord b is vec<2>;

canon b f(a x) { 
    return [1., 2.];
}

canon b g(a x) { 
    return [2., 2.];
}

void main() {
    a avec = [1., 2.];
    b fail = avec in b; // ambiguous path
}